--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,10 @@
 	\listoffigures
 	\listoftables
 	\printglossary
-	\printglossary[title=List of Abbreviations,type=\acronymtype]	
+	\printglossary[title=List of Abbreviations,type=\acronymtype]
+
+	% Todos:
+	% - add urls last accessed
 	
 	% arabic page numbering
 	\mainmatter
